# raytracer

./: .gitmodules  README.md  pom.xml
c/: CMakeLists.txt  compile_commands.json  make_ppm.c
c/src/: color.c  color.h  draw_scene.c  hittable.c  hittable.h  make_ppm.c  material.c  material.h  ray.c  ray.h  vec3.c  vec3.h
c/tests/: test_vec3.c
java/src/main/java/com/example/raytracer/: Camera.java  Material.java
java/src/main/java/com/example/raytracer/hittable/: HitRecord.java
java/src/main/java/com/example/raytracer/vector/: RgbVec.java  SpatialVec.java
java/src/test/java/com/example/raytracer/: RayTests.java
java/src/test/java/com/example/raytracer/hittable/: HitRecordTest.java
java/src/test/java/com/example/raytracer/vector/: Vec3Tests.java
src/main/java/com/example/raytracer/: Ray.java  ScenePpmImageRenderer.java  SimplePpmImageRenderer.java
src/main/java/com/example/raytracer/hittable/: Hittable.java  HittableList.java  Sphere.java
src/main/java/com/example/raytracer/vector/: RgbVec.java  SpatialVec.java  Vec3.java
src/main/resources/: log4j2.properties
